<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPost">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/reply"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tvposttitle"
        android:text="@string/Posttitle" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/reply" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="10"
        android:scrollbars="vertical"
        android:id="@+id/etcontent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnaddnewreply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/reply"/>

            <Button
                android:id="@+id/btnindex"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="index"
                android:text="@string/index"/>

        </LinearLayout>

</LinearLayout>